test script in package.json to run tests. mytest checks the response of the index

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my training project",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "mocha ./test/* --exit"
   },
   "repository": {
     "type": "git",
