--- a/package.json
+++ b/package.json
@@ -15,5 +15,19 @@
   "bugs": {
     "url": "https://github.com/isharafe/node-express-mongo-learn/issues"
   },
-  "homepage": "https://github.com/isharafe/node-express-mongo-learn#readme"
+  "homepage": "https://github.com/isharafe/node-express-mongo-learn#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/node": "^18.0.3",
+    "typescript": "^4.7.4"
+  }
 }
