--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/node": "^18.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
 }
