--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "helmet": "^5.1.0"
+    "helmet": "^5.1.0",
+    "mongoose": "^6.4.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
